[gd_scene load_steps=3 format=3 uid="uid://blak0s0fg155p"]

[ext_resource type="Script" path="res://Game/Game.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d1a1onoltxv3g" path="res://Game/Sunshine.tscn" id="2_nctwy"]

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Sunshine" parent="." instance=ExtResource("2_nctwy")]

[node name="Layer_Structs" type="Node2D" parent="."]

[node name="Layer_Ships" type="Node2D" parent="."]

[node name="Layer_Shots" type="Node2D" parent="."]

[node name="Layer_Effects_Normal" type="Node2D" parent="."]

[node name="Layer_Effects_Bright" type="Node2D" parent="."]

[node name="Layer_Stats" type="Node2D" parent="."]

[node name="Layer_New" type="Node2D" parent="."]
visible = false
